--- a/src/components/file-upload/z-file-upload/styles.css
+++ b/src/components/file-upload/z-file-upload/styles.css
@@ -48,16 +48,14 @@
   display: none;
 }
 
-:host #title:not(:last-child) {
-  margin-bottom: var(--space-unit);
+:host #title + #description {
+  margin-top: var(--space-unit);
 }
 
-:host > * + z-button {
+:host > * + z-button,
+:host > .files-container + *,
+:host > .files-container:not(:first-child) {
   margin-top: calc(var(--space-unit) * 3);
-}
-
-:host > .files-container {
-  margin-bottom: calc(var(--space-unit) * 3);
 }
 
 :host > .files-container.hidden {
@@ -65,12 +63,6 @@
 }
 
 :host > .files-container > .uploaded-files-label {
-  display: inline-block;
-  margin: calc(var(--space-unit) * 2) 0;
-}
-
-:host([type="dragdrop"]) > .files-container > .uploaded-files-label {
-  margin-top: 0;
   margin-bottom: calc(var(--space-unit) * 2);
 }
 
